--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -26,6 +26,9 @@
 
     <link rel="shortcut icon" href="/assets/admin/images/favicon.png"/>
 
+    //TOASTR
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Components CSS -->
     <th:block th:replace="${cssResources} ?: ~{}"></th:block>
 </head>
@@ -233,6 +236,9 @@
 
 <script src="/assets/admin/js/dashboard-light.js"></script>
 <script src="/assets/admin/js/datepicker.js"></script>
+
+///TOASTR
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <th:block th:replace="${jsResources} ?: ~{}"></th:block>
 </body>
