--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
@@ -29,20 +29,24 @@
                         <div class="container">
                             <div class="row my-t bs">
                                 <div class="col d-flex justify-content-center">
-                                    <img id="avatar-hotel" class="rounded-circle" style="width: 150px; height: 150px" alt="Avatar"
+                                    <img id="avatar-hotel" class="rounded-circle" style="width: 150px; height: 150px"
+                                         alt="Avatar"
                                          src="/assets/user/images/default-avatar.png"/>
 
                                 </div>
                                 <div class="row mt-2 mx-0">
                                     <div class="col d-flex justify-content-center">
                                         <button class="btn btn-sm change-avatar-hotel" style="border: 0.5px solid grey">
-                                            <i class="link-icon p-1" data-feather="upload"></i> Upload avatar</button>
-                                        <button class="btn btn-sm btn-success submit-avatar-btn ml-1" hidden="hidden">Save</button>
+                                            <i class="link-icon p-1" data-feather="upload"></i> Upload avatar
+                                        </button>
+                                        <button class="btn btn-sm btn-success submit-avatar-btn ml-1" hidden="hidden">
+                                            Save
+                                        </button>
                                     </div>
                                 </div>
 
                             </div>
-                            <form class="forms-sample mt-3">
+                            <form class="forms-sample mt-3" id="uploadForm">
                                 <div class="row">
                                     <input type="file" hidden="hidden" id="avatar-input-hotel"/>
                                     <div class="col-lg-6 mb-3">
@@ -68,17 +72,19 @@
                                     </div>
 
 
-<!--                                    <div class="col-lg-6 mb-3">-->
-<!--                                        <label for="gender" class="form-label">Gender</label>-->
-<!--                                        <select class="form-select" id="gender" name="gender">-->
-<!--                                            <option th:each="gender : ${genders}" th:value="${gender}" th:text="${gender.name}"></option>-->
-<!--                                        </select>-->
-<!--                                    </div>-->
+                                    <!--                                    <div class="col-lg-6 mb-3">-->
+                                    <!--                                        <label for="gender" class="form-label">Gender</label>-->
+                                    <!--                                        <select class="form-select" id="gender" name="gender">-->
+                                    <!--                                            <option th:each="gender : ${genders}" th:value="${gender}" th:text="${gender.name}"></option>-->
+                                    <!--                                        </select>-->
+                                    <!--                                    </div>-->
 
 
                                     <div class="text-right pt-4">
-                                        <button type="submit" class="btn btn-primary submit-hotel-profile-btn"><i class="link-icon"
-                                                                                         data-feather="save"></i> Save Profile</button>
+                                        <button type="submit" class="btn btn-primary submit-hotel-profile-btn"
+                                                id="submit-hotel-profile-btn"><i class="link-icon"
+                                                                                 data-feather="save"></i> Save Profile
+                                        </button>
                                     </div>
                                 </div>
                             </form>
@@ -101,9 +107,12 @@
             let nameInput = document.getElementById('name');
             let phoneInput = document.getElementById('phone');
             let addressInput = document.getElementById('address');
+            let avatarInput = document.getElementById('avatar-hotel')
+
+            const btnSubmit = document.getElementById('submit-hotel-profile-btn');
 
             emailInput.value = userInfo.username;
-            emailInput.readOnly= true;
+            emailInput.readOnly = true;
 
             getHotelByEmail();
 
@@ -124,6 +133,7 @@
                             nameInput.value = response.name;
                             phoneInput.value = response.phone;
                             addressInput.value = response.address;
+                            avatarInput.src = response.imageUrl;
 
                         },
                         error: function (xhr, status, error) {
@@ -154,23 +164,53 @@
                 $("#avatar-hotel").attr("src", imageUrl);
             });
 
-            $(".submit-hotel-profile-btn").click(() => {
-                if (!chosenFile) {
-                    toastr.error("Chưa chọn file");
-                    return;
-                }
-
+            btnSubmit.addEventListener('click', function () {
+                // if (!chosenFile) {
+                //     toastr.error("Chưa chọn file");
+                //     return;
+                // }
+                //
+                // let imageUrl = null;
                 const formData = new FormData();
-                formData.append('avatar', chosenFile);
+                formData.append('file', chosenFile);
+                formData.append('name', nameInput.value);
+                formData.append('phone', phoneInput.value);
+                formData.append('address', addressInput.value);
+                formData.append('email', emailInput.value);
+                // $.ajax({
+                //     url: '/api/v1/files',
+                //     data: formData,
+                //     type: 'POST',
+                //     contentType: false, // NEEDED, DON'T OMIT THIS (requires jQuery 1.6+)
+                //     processData: false, // NEEDED, DON'T OMIT THIS
+                //     success: function (data) {
+                //         console.log(data);
+                //         imageUrl = data;
+                //     },
+                //     error: function (errorData) {
+                //         console.log(errorData);
+                //         toastr.error(errorData);
+                //     }
+                // });
+                //
+                //
+                // let formDataHotel = {
+                //     name: nameInput.value,
+                //     email: emailInput.value,
+                //     phone: phoneInput.value,
+                //     avatar: imageUrl,
+                //     address: addressInput.value
+                // }
                 $.ajax({
-                    url: '/api/v1/users/avatar',
+                    url: '/api/v1/partner/hotel',
                     data: formData,
-                    type: 'POST',
+                    type: 'PUT',
                     contentType: false, // NEEDED, DON'T OMIT THIS (requires jQuery 1.6+)
                     processData: false, // NEEDED, DON'T OMIT THIS
                     success: function (data) {
+                        toastr.success("Update thông tin khách sạn thành công")
                         console.log(data);
-                        toastr.success(data);
+                        location.reload();
                     },
                     error: function (errorData) {
                         console.log(errorData);
@@ -178,6 +218,7 @@
                     }
                 });
             });
+
 
         });
     </script>
