--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
@@ -25,7 +25,7 @@
                 <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Room Management</li>
             </ol>
-            <button class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add room</button>
+            <a href="/partner/add-room" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add room</a>
         </nav>
         <div class="search-box p-4 bg-white rounded mb-3 box-shadow">
             <form class="forms-sample">
