--- a/spring-tutorial-practice-master/spring-tutorial-practice-master/05-tiny-student-management-05/src/main/resources/templates/student-list.html
+++ b/spring-tutorial-practice-master/spring-tutorial-practice-master/05-tiny-student-management-05/src/main/resources/templates/student-list.html
@@ -30,34 +30,62 @@
 
     <div class="row mt-4 mx-3">
         <div class="col">
-            <table class="table table-bordered table-hover table-striped">
+            <table id="roomtable" class="table">
+                <thead>
                 <tr>
-                    <th class="text-center">ID</th>
-                    <th class="text-center">Name</th>
-                    <th class="text-center">Address</th>
-                    <th class="text-center">Email</th>
-                    <th class="text-center">Phone</th>
-                    <th class="text-center">Date of birth</th>
-                    <th class="text-center">GPA</th>
-                    <th class="text-center">Region</th>
-                    <th class="text-center">Actions</th>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Facility</th>
+                    <th>Price</th>
+                    <th>Capacity</th>
+                    <th>Status</th>
+                    <th class="text-center">Published</th>
+                    <th class="text-center">Action</th>
                 </tr>
-                <tr th:each="sinhVien: ${danhSachSinhVien}">
-                    <td th:text="${sinhVien.id}"/>
-                    <td th:text="${sinhVien.name}"/>
-                    <td th:text="${sinhVien.address}"/>
-                    <td th:text="${sinhVien.email}"/>
-                    <td th:text="${sinhVien.phone}"/>
-                    <td th:text="${sinhVien.dob}"/>
-                    <td th:text="${sinhVien.gpa}"/>
-                    <td th:text="${sinhVien.region.name}"/>
+                </thead>
+                <tbody>
+                <tr th:each="room : ${roomList}">
+                    <td th:text="${room.id}">ID</td>
+                    <td th:text="${room.name}">Name</td>
+                    <!-- Kết hợp danh sách các tiện ích thành một chuỗi và hiển thị -->
                     <td>
-                        <a role="button" class="mr-3 text-primary update-student" th:attr="student-id=${sinhVien.id}">
-                            <i class="fas fa-pencil-alt"></i>
-                        </a>
+                <span th:each="facility, iterStat : ${room.facilities}"
+                      th:text="${facility.name}"
+                      th:if="${!iterStat.last} + ', '"></span>
+                        <span th:unless="${room.facilities.empty()}"
+                              th:text="${room.facilities[room.facilities.size() - 1].name}"></span>
+                    </td>
+                    <td th:text="${room.price}">Price</td>
+                    <td th:text="${room.capacity}">Capacity</td>
+                    <td th:text="${room.status}">Status</td>
+                    <td class="text-center">
+                <span class="form-check form-switch">
+                    <input type="checkbox" class="form-check-input" id="formSwitch1">
+                </span>
+                    </td>
+                    <td class="text-center">
+                        <ul class="d-flex list-unstyled mb-0 justify-content-center">
+                            <li class="me-2">
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#view">
+                                    <i class="link-icon" data-feather="eye"></i>
+                                </a>
+                            </li>
+                            <li class="me-2">
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#addslider">
+                                    <i class="link-icon" data-feather="edit"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="link-icon" data-feather="delete"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </td>
                 </tr>
+                </tbody>
             </table>
+
         </div>
     </div>
 
